[tool.poetry]
name = "heating_loads_first_test"
version = "0.1.0"
description = "This is DSSG's first pkg"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
