[tool.poetry]
name = "heating_loads_first_test"
version = "0.1.0"
description = "This is DSSG's first pkg"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = {extras = ["all"], version = "^1.0.0"}
geemap = "^0.15.5"
earthengine-api = "^0.1.317"
pandas = "^1.4.3"
sklearn = "^0.0"
plotnine = "^0.9.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
